--- a/yoga/index.html
+++ b/yoga/index.html
@@ -215,7 +215,7 @@
 				<div class="popup-title">
 				Форма обратной связи</div>
 					<div class="popup-form">	
-						<form action="#" class="main-form">
+						<form action="#" method="POST" class="main-form">
 							<div class="popup-form-header">
 								Узнайте больше о своём отдыхе
 							</div>
